Skip to content

4.0 regression: test_libvlc_slaves fails pseudorandomly

FAIL: test_libvlc_slaves
========================

[000060e000000040] main libvlc warning: cannot read /home/remi/videolan/vlc/build/src/.libs/vlc/plugins/plugins.dat: No such file or directory
[000060e000001380] main libvlc warning: cannot read /home/remi/videolan/vlc/build/src/.libs/vlc/plugins/plugins.dat: No such file or directory
LibVLC fatal error joining thread (35) in thread 175333 at ../../src/posix/thread.c:227 in vlc_join
/usr/lib/x86_64-linux-gnu/libasan.so.6(+0x43df1)[0x7fcb7cd60df1]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(+0x94b611)[0x7fcb7bba2611]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(+0x94b773)[0x7fcb7bba2773]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(vlc_join+0x11c)[0x7fcb7bba3085]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(vlc_executor_Delete+0x438)[0x7fcb7bb0557a]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(+0x62de7a)[0x7fcb7b884e7a]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(libvlc_InternalCleanup+0x5ba)[0x7fcb7b7d6c68]
/home/remi/videolan/vlc/build/lib/.libs/libvlc.so.12(libvlc_release+0x122)[0x7fcb7b183e57]
/home/remi/videolan/vlc/build/lib/.libs/libvlc.so.12(libvlc_media_release+0x63f)[0x7fcb7b19b940]
/home/remi/videolan/vlc/build/lib/.libs/libvlc.so.12(+0x8006a)[0x7fcb7b19a06a]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(+0x62990a)[0x7fcb7b88090a]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(+0x62bbb7)[0x7fcb7b882bb7]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.9(+0x8acabf)[0x7fcb7bb03abf]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x8ea7)[0x7fcb7af33ea7]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x3f)[0x7fcb7b052d4f]

## Testing --sub-autodetect-fuzzy 1 (everything)
Parse media dir to get subitems
Main media mrl: 'file:///home/remi/videolan/vlc/build/test/../../test/samples/slaves/test.mp4'
Fetch main media from subitems
Found main media
Check if slaves are correclty attached to media
Check if slaves[0] is found
Check if slaves[1] is found
Check if slaves[2] is found
Check if slaves[3] is found

## Testing --sub-autodetect-fuzzy 2 (full, left, and right match)
Parse media dir to get subitems
Main media mrl: 'file:///home/remi/videolan/vlc/build/test/../../test/samples/slaves/test.mp4'
Fetch main media from subitems
Found main media
Check if slaves are correclty attached to media
Check if slaves[0] is found
Check if slaves[1] is found
Check if slaves[2] is found

## Testing if the matching is not too permissive
Parse media dir to get subitems
Main media mrl: 'file:///home/remi/videolan/vlc/build/test/../../test/samples/slaves/t.mp4'
Fetch main media from subitems
Found main media
Check if slaves are correclty attached to media

## Testing --sub-autodetect-fuzzy 3 (full and left match)
Parse media dir to get subitems
Main media mrl: 'file:///home/remi/videolan/vlc/build/test/../../test/samples/slaves/test.mp4'
Fetch main media from subitems
Found main media
Check if slaves are correclty attached to media
Check if slaves[0] is found
Check if slaves[1] is found

## Testing --sub-autodetect-fuzzy 4 (full match)
Parse media dir to get subitems
Main media mrl: 'file:///home/remi/videolan/vlc/build/test/../../test/samples/slaves/test.mp4'
Fetch main media from subitems
Found main media
Check if slaves are correclty attached to media
Check if slaves[0] is found

## Testing  --no-sub-autodetect-file (no match)
Parse media dir to get subitems
Main media mrl: 'file:///home/remi/videolan/vlc/build/test/../../test/samples/slaves/test.mp4'
Fetch main media from subitems
Found main media
Check if slaves are correclty attached to media
Thread error: Success
FAIL test_libvlc_slaves (exit status: 134)

Bisection not done as failure is intermittent. Looking at the stack trace, this is most likely caused by the migratiom of something onto the executor API.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information